--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -173,8 +173,9 @@ div {
 
     .report h1{
         font-size: 2em; 
-        color: var(--quaternary-color);
+        color: var(--quinary-color);
         font-family: 'IBM Plex Sans Condensed', sans-serif;
+        text-align: center;
     }
     
     .table{
